attic/old_tests/xml/invalidxml/obsTime/badtime3.xml.README
badtime3.xml: BAD because obsTime must have two seconds digits
